# Codex-Switch-Tauri2

./: .gitattributes  .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
.github/workflows/: windows-tauri-release.yml
src/: main.tsx
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: app_commands.rs
src-tauri/src/errors/: app_error.rs
src-tauri/src/models/: app.rs  backup.rs  connection.rs  mod.rs  profile.rs  switch.rs  template.rs
src-tauri/src/services/: backup_service.rs  codex_switch_service.rs  connection_test_service.rs  log_service.rs  mod.rs  profile_store.rs  session_migration_service.rs  target_service.rs  template_service.rs  wsl_service.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/utils/: dpapi.rs  file_dialog.rs  fs_utils.rs  mod.rs  path_utils.rs
src/app/: app-root.tsx
src/hooks/: use-bootstrap.ts
src/pages/: backups-page.tsx  logs-page.tsx  profiles-page.tsx  settings-page.tsx  switch-page.tsx  templates-page.tsx  workbench-page.tsx
src/store/: app-shell-store.ts
src/styles/: globals.css
src/types/: domain.ts
tests/frontend/: test_app_api.test.ts  test_app_header.test.tsx  test_app_shell_store.test.ts  test_fixtures.ts  test_log_center.test.tsx  test_profile_management.test.tsx  test_sidebar.test.tsx  test_switch_executor.test.tsx  test_template_batch_utils.test.ts  (+3 more)
(+33 files in other folders)
