[package]
name = "codex-switch-tauri"
version = "1.3.0"
description = "Codex Switch 的 Tauri 2 桌面端"
license = "MIT"
edition = "2021"

[lib]
name = "codex_switch_tauri_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["clock", "serde"] }
dirs = "6.0.0"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.10.3", default-features = false, features = ["wry", "compression", "dynamic-acl"] }
tauri-plugin-log = "2.8.0"
thiserror = "2.0.17"
toml = "0.8.23"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
walkdir = "2.5.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Security_Cryptography", "Win32_System_Memory", "Win32_UI_Controls_Dialogs", "Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.23.0"

[build-dependencies]
tauri-build = { version = "2.5.6" }

[profile.dev]
incremental = true

[profile.test]
incremental = true

[profile.release]
incremental = true
